--- a/index.html
+++ b/index.html
@@ -1,40 +1,38 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-  <link rel="stylesheet" type="text/css" href="css/estilos.css">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge"> <!-- indicamos al navegador que la web es compatible con MS Edge mas datos en "http://stackoverflow.com/questions/6771258/what-does-meta-http-equiv-x-ua-compatible-content-ie-edge-do"-->
-  <title>Proyect Lunar Landing</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
+    
+    <title>Proyect Lunar Landing</title>
 </head>
 <body>
-  <div class="main">
-    <div class="cieloestrellado">
-      <h1>Project Lunar Landing</h1> <!-- (?) al añadir el titulo h1 se añade una fila superior que no se como eliminar -->
-      <!--<p>cielo</p> titulo de capa -->
-      <div class="opciones">
-        <!--<p>opciones</p> titulo de capa -->
-        <ul class="listas">
-          <li class="pause"><a href="">PAUSE</a></li>
-          <li class="about">ABOUT</li>
-          <li class="howtoplay">HOW TO PLAY</li>
-        </ul>
-      </div>
-      <div class="panel">
-        <!--<p>panel</p> titulo de capa -->
-        <ul class="listas">
-          <li class="speed">SPEED km/h</li>
-          <li class="fuel">FUEL g/l</li>
-          <li class="height">HEIGHT mt</li>
-        </ul>
-      </div>
-      <div class="nave">
-        <!--<p>nave</p> titulo de capa -->
-      </div>
-    </div>
-    <div class="suelolunar">
-      <!--<p>suelo</p> titulo de capa -->
-    </div>
-  </div>
+    <main>
+        <header>
+            <h1>Project Lunar Landing</h1>
+        </header>
+        <nav>
+            <ul>
+                <li id="pause">PAUSE</li>
+                <li id="about">ABOUT</li>
+                <li id="howtoplay">HOW TO PLAY</li>
+            </ul>
+        </nav>
+        <aside>
+            <ul>
+                <li id="speed">SPEED</li>
+                <li id="fuel">FUEL</li>
+                <li id="height">HEIGHT</li>
+            </ul>
+        </aside>
+        <section>
+
+        </section>
+        <footer>
+            <p>copyright 2017 | Github</p>
+        </footer>
+    </main>
 </body>
 </html>
