--- a/index.html
+++ b/index.html
@@ -5,34 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    
     <title>Proyect Lunar Landing</title>
 </head>
 <body>
     <main>
-        <header>
-            <h1>Project Lunar Landing</h1>
-        </header>
-        <nav>
-            <ul>
-                <li id="pause">PAUSE</li>
-                <li id="about">ABOUT</li>
-                <li id="howtoplay">HOW TO PLAY</li>
-            </ul>
-        </nav>
-        <aside>
-            <ul>
-                <li id="speed">SPEED</li>
-                <li id="fuel">FUEL</li>
-                <li id="height">HEIGHT</li>
-            </ul>
-        </aside>
-        <section>
-
-        </section>
-        <footer>
-            <p>copyright 2017 | Github</p>
-        </footer>
+        <div id="fondo">
+            <header>
+                <h1>Project Lunar Landing</h1>
+            </header>
+            <nav>
+                <div id="opciones">
+                    <ul>
+                        <li id="pause">PAUSE</li>
+                        <li id="about">ABOUT</li>
+                        <li id="howtoplay">HOW TO PLAY</li>
+                    </ul>
+                </div>
+            </nav>
+            <aside>
+                <div id="panel">
+                    <ul>
+                        <li id="speed">SPEED</li>
+                        <li id="fuel">FUEL</li>
+                        <li id="height">HEIGHT</li>
+                    </ul>
+                </div>
+            </aside>
+            <section>
+                <div id="nave"></div>
+            </section>
+        </div>
+        <div id="suelo">
+            <footer>
+                <p>copyright 2017 | Github</p>
+            </footer>
+        </div>
     </main>
 </body>
 </html>
