cambios en estructura

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <h1>Project Lunar Landing</h1>
             </header>
             <nav>
-                <div id="opciones">
+                <div id="menu">
                     <ul>
                         <li id="pause">PAUSE</li>
                         <li id="about">ABOUT</li>
@@ -32,7 +32,7 @@
                 </div>
             </aside>
             <section>
-                <div id="nave"></div>
+                <div class="nave"></div>
             </section>
         </div>
         <div id="suelo">
