--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Proyect Lunar Landing</title>
 </head>
+
 <body>
     <main>
         <div id="fondo">
@@ -14,25 +16,38 @@
                 <h1>Project Lunar Landing</h1>
             </header>
             <nav>
-                <div id="menu">
+                <div class="menu">
                     <ul>
-                        <li id="pause">PAUSE</li>
-                        <li id="about">ABOUT</li>
-                        <li id="howtoplay">HOW TO PLAY</li>
+                        <li class="pause">
+                            <a href="pause.html">PAUSE</a>
+                        </li>
+                        <li class="about">
+                            <a href="about.html">ABOUT</a>
+                        </li>
+                        <li class="howto">
+                            <a href="howto.html">HOW TO PLAY</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
             <aside>
-                <div id="panel">
+                <div class="panel">
                     <ul>
-                        <li id="speed">SPEED</li>
-                        <li id="fuel">FUEL</li>
-                        <li id="height">HEIGHT</li>
+                        <li class="speed">
+                            <a href="">SPEED</a>
+                        </li>
+                        <li class="fuel">
+                            <a href="">FUEL</a>
+                        </li>
+                        <li class="height">
+                            <a href="">HEIGHT</a>
+                        </li>
                     </ul>
                 </div>
             </aside>
             <section>
                 <div class="nave"></div>
+                <p>prueba</p>
             </section>
         </div>
         <div id="suelo">
@@ -42,4 +57,5 @@
         </div>
     </main>
 </body>
+
 </html>
