Creando Readme y cambios en el CSS

--- a/index_old.html
+++ b/index_old.html
@@ -15,7 +15,7 @@
       <div class="opciones">
         <!--<p>opciones</p> titulo de capa -->
         <ul class="listas">
-          <li class="pause"><a href="">PAUSE</a></li>
+          <li class="START"><a href="">START</a></li>
           <li class="about">ABOUT</li>
           <li class="howtoplay">HOW TO PLAY</li>
         </ul>
