añado funcionalidad responsive mob.css

--- a/howto.html
+++ b/howto.html
@@ -18,14 +18,27 @@
             <nav>
                 <div class="menu">
                     <ul>
-                        <li class="play"> <!-- tiene que ser un toggle que cambie a pause cuando se haga click -->
-                            <a href="index.html">PLAY</a>
+                        <li class="play">
+                            <!-- tiene que ser un toggle que cambie a pause cuando se haga click -->
+                            <a href="index.html">
+                                <p>
+                                    PLAY
+                                </p>
+                            </a>
                         </li>
                         <li class="about">
-                            <a href="about.html">ABOUT</a>
+                            <a href="about.html">
+                                <p>
+                                    ABOUT
+                                </p>
+                            </a>
                         </li>
                         <li class="howto">
-                            <a href="howto.html">HOW TO PLAY</a>
+                            <a href="howto.html">
+                                <p>
+                                    HOW TO PLAY
+                                </p>
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -34,20 +47,33 @@
                 <div class="panel">
                     <ul>
                         <li class="speed">
-                            <a href="">SPEED</a>
+                            <a href="">
+                                <p>
+                                    SPEED
+                                </p>
+                            </a>
                         </li>
                         <li class="fuel">
-                            <a href="">FUEL</a>
+                            <a href="">
+                                <p>
+                                    FUEL
+                                </p>
+                            </a>
                         </li>
                         <li class="height">
-                            <a href="">HEIGHT</a>
+                            <a href="">
+                                <p>
+                                    HEIGHT
+                                </p>
+                            </a>
                         </li>
                     </ul>
                 </div>
             </aside>
             <section>
                 <article id="howto">
-                    <p>Para jugar al juego hay que apretar la tecla de ESPACIO para encender el motor de la nave y soltarla para apagarlo.</p>
+                    <p>Para jugar al juego hay que apretar la tecla de ESPACIO para encender el motor de la nave y soltarla
+                        para apagarlo.</p>
                     <p>Si la nave aterriza a una velocidad muy elevada se destruirá y abrás perdido</p>
                 </article>
             </section>
