ultima version mob.css

--- a/about-mob.html
+++ b/about-mob.html
@@ -71,7 +71,9 @@
                 </div>
             </aside>
             <section>
-                <div class="nave"></div>
+                <article id="about">
+                    <p>Este proyecto ha sido realizado para la tarea de LMSGI tema02</p>
+                </article>
             </section>
         </div>
         <div id="suelo">
