--- a/howto-mob.html
+++ b/howto-mob.html
@@ -71,7 +71,11 @@
                 </div>
             </aside>
             <section>
-                <div class="nave"></div>
+                <article id="howto">
+                    <p>Para jugar al juego hay que apretar la tecla de ESPACIO para encender el motor de la nave y soltarla
+                        para apagarlo.</p>
+                    <p>Si la nave aterriza a una velocidad muy elevada se destruirá y abrás perdido</p>
+                </article>
             </section>
         </div>
         <div id="suelo">
