--- a/howto-mob.html
+++ b/howto-mob.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/mob.css">
+    <!-- <link rel="stylesheet" href="css/mob.css"> -->
+    <link rel='stylesheet' media='screen and (min-width: 961px)' href='css/pc.css'>
+    <link rel='stylesheet' media='screen and (max-width: 960px)' href='css/mob.css'>
     <title>Proyect Lunar Landing</title>
 </head>
 
