--- a/howto.html
+++ b/howto.html
@@ -76,7 +76,7 @@
                 <article id="howto">
                     <p>Para jugar al juego hay que apretar la tecla de ESPACIO para encender el motor de la nave y soltarla
                         para apagarlo.</p>
-                    <p>Si la nave aterriza a una velocidad muy elevada se destruirá y abrás perdido</p>
+                    <p>Si la nave aterriza a una velocidad muy elevada se destruirá y habrás perdido</p>
                 </article>
             </section>
         </div>
