--- a/about-mob.html
+++ b/about-mob.html
@@ -1,89 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- <link rel="stylesheet" href="css/mob.css"> -->
-    <link rel='stylesheet' media='screen and (min-width: 961px)' href='css/pc.css'>
-    <link rel='stylesheet' media='screen and (max-width: 960px)' href='css/mob.css'>
-    <title>Proyect Lunar Landing</title>
-</head>
-
-<body>
-    <main>
-        <div id="fondo">
-            <header>
-                <h1>Project Lunar Landing</h1>
-            </header>
-            <nav>
-                <div class="menu">
-                    <ul>
-                        <li class="play">
-                            <!-- tiene que ser un toggle que cambie a pause cuando se haga click -->
-                            <a href="index-mob.html">
-                                <p>
-                                    PLAY
-                                </p>
-                            </a>
-                        </li>
-                        <li class="about">
-                            <a href="about-mob.html">
-                                <p>
-                                    ABOUT
-                                </p>
-                            </a>
-                        </li>
-                        <li class="howto">
-                            <a href="howto-mob.html">
-                                <p>
-                                    HOW TO PLAY
-                                </p>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-            <aside>
-                <div class="panel">
-                    <ul>
-                        <li class="speed">
-                            <a href="">
-                                <p>
-                                    SPEED
-                                </p>
-                            </a>
-                        </li>
-                        <li class="fuel">
-                            <a href="">
-                                <p>
-                                    FUEL
-                                </p>
-                            </a>
-                        </li>
-                        <li class="height">
-                            <a href="">
-                                <p>
-                                    HEIGHT
-                                </p>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </aside>
-            <section>
-                <article id="about">
-                    <p>Este proyecto ha sido realizado para la tarea de LMSGI tema02</p>
-                </article>
-            </section>
-        </div>
-        <div id="suelo">
-            <footer>
-                <p>copyright 2017 | Github</p>
-            </footer>
-        </div>
-    </main>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><!-- <link rel="stylesheet" href="css/mob.css"> --><link rel="stylesheet" media="screen and (min-width: 961px)" href="css/pc.css"><link rel="stylesheet" media="screen and (max-width: 960px)" href="css/mob.css"><title>Proyect Lunar Landing</title></head><body><main><div id="fondo"><header><h1>Project Lunar Landing</h1></header><nav><div class="menu"><ul><li class="play"><!-- tiene que ser un toggle que cambie a pause cuando se haga click --> <a href="index-mob.html"><p>PLAY</p></a></li><li class="about"><a href="about-mob.html"><p>ABOUT</p></a></li><li class="howto"><a href="howto-mob.html"><p>HOW TO PLAY</p></a></li></ul></div></nav><aside><div class="panel"><ul><li class="speed"><a href=""><p>SPEED</p></a></li><li class="fuel"><a href=""><p>FUEL</p></a></li><li class="height"><a href=""><p>HEIGHT</p></a></li></ul></div></aside><section><article id="about"><p>Este proyecto ha sido realizado para la tarea de LMSGI tema02</p></article></section></div><div id="suelo"><footer><p>copyright 2017 | Github</p></footer></div></main></body></html>
